Added consumes and produces to php templates.

--- a/src/main/resources/php/api.mustache
+++ b/src/main/resources/php/api.mustache
@@ -45,6 +45,8 @@ class {{classname}} {
   		$method = "{{httpMethod}}";
       $queryParams = array();
       $headerParams = array();
+      $headerParams['Accept'] = '{{produces}}';
+      $headerParams['Content-Type'] = '{{consume}}';
 
       {{#queryParams}}
   		if(${{paramName}} != null) {
