Fixed type name.

--- a/src/main/resources/php/Swagger.mustache
+++ b/src/main/resources/php/Swagger.mustache
@@ -45,7 +45,7 @@ class APIClient {
 	 * @param array $queryParams parameters to be place in query URL
 	 * @param array $postData parameters to be placed in POST body
 	 * @param array $headerParams parameters to be place in request header
-	 * @return unknown
+	 * @return mixed
 	 */
 	public function callAPI($resourcePath, $method, $queryParams, $postData,
 		$headerParams) {
