fix for broken links when using file system to browse

--- a/src/main/resources/swagger-static/index.mustache
+++ b/src/main/resources/swagger-static/index.mustache
@@ -32,12 +32,12 @@
     		{{#apis}}
         <div class="section-box">
           <div class="section-header">
-            <a href="/#!/{{className}}">{{className}}</a>
+            <a href="#!/{{className}}">{{className}}</a>
           </div>
           <ul>
 			      {{#operations}}
 			      {{#operation}}
-            <li><a href="/#!/{{className}}#{{nickname}}">{{nickname}}</a></li>
+            <li><a href="#!/{{className}}#{{nickname}}">{{nickname}}</a></li>
             {{/operation}}
             {{/operations}}
           </ul>
