--- a/src/main/resources/swagger-static/model.mustache
+++ b/src/main/resources/swagger-static/model.mustache
@@ -5,7 +5,7 @@
   {{#vars}}
 <ul class="parameter">
   <li class="param-required-{{required}}">{{name}} : {{datatype}}
-	  <div class="param-description">{{description}}</div>
+	  <br/>{description}}
   </li>
 </ul>
   {{/vars}}
