updated jodatime version, added groupId and artifactId params

--- a/src/main/resources/Java/JsonUtil.mustache
+++ b/src/main/resources/Java/JsonUtil.mustache
@@ -5,6 +5,8 @@ import com.fasterxml.jackson.databind.*;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
 import com.fasterxml.jackson.core.JsonGenerator.Feature;
 
+import com.fasterxml.jackson.datatype.joda.*;
+
 public class JsonUtil {
   public static ObjectMapper mapper;
 
