--- a/src/main/resources/scala/pom.mustache
+++ b/src/main/resources/scala/pom.mustache
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.wordnik</groupId>
-  <artifactId>swagger-client</artifactId>
+  <groupId>{{groupId}}</groupId>
+  <artifactId>{{artifactId}}</artifactId>
   <packaging>jar</packaging>
-  <name>swagger-client</name>
-  <version>1.0</version>
+  <name>{{artifactId}}</name>
+  <version>{{apiVersion}}</version>
   <prerequisites>
     <maven>2.2.0</maven>
   </prerequisites>
