--- a/samples/server-generator/scalatra/templates/api.mustache
+++ b/samples/server-generator/scalatra/templates/api.mustache
@@ -43,6 +43,9 @@ class {{className}} (implicit val swagger: Swagger) extends ScalatraServlet
         {{#bodyParameter}}
         bodyParam[{{dataType}}]("{{paramName}}").description(""){{^required}}.optional{{/required}}{{#defaultValue}}.defaultValue({{{defaultValue}}}){{/defaultValue}}
         {{/bodyParameter}}
+        {{#formParameter}}
+        formParam[{{dataType}}]("{{paramName}}").description(""){{^required}}.optional{{/required}}{{#defaultValue}}.defaultValue({{{defaultValue}}}){{/defaultValue}}
+        {{/formParameter}}
         {{#hasMore}},{{/hasMore}}
         {{/allParams}})
   )
@@ -60,6 +63,10 @@ class {{className}} (implicit val swagger: Swagger) extends ScalatraServlet
     {{#headerParameter}}
       val {{paramName}} = request.getHeader("{{paramName}}")
     {{/headerParameter}}
+
+    {{#formParameter}}
+      val {{paramName}} = params.getAs[{{dataType}}]("{{paramName}}")
+    {{/formParameter}}
 
     {{#bodyParameter}}
       val {{paramName}} = parsedBody.extract[{{dataType}}]
