--- a/src/main/resources/php/Swagger.mustache
+++ b/src/main/resources/php/Swagger.mustache
@@ -203,7 +203,7 @@ class APIClient {
       }
       $deserialized = $values;
     } elseif ($class == 'DateTime') {
-      $deserialized = new DateTime($data);
+      $deserialized = new \DateTime($data);
     } elseif (in_array($class, array('string', 'int', 'float', 'bool'))) {
       settype($data, $class);
       $deserialized = $data;
