--- a/src/main/resources/php/api.mustache
+++ b/src/main/resources/php/api.mustache
@@ -45,7 +45,7 @@ class {{classname}} {
   		$method = "{{httpMethod}}";
       $queryParams = array();
       $headerParams = array();
-      $headerParams['Accept'] = '{{produces}}';
+      $headerParams['Accept'] = '{{produce}}';
       $headerParams['Content-Type'] = '{{consume}}';
 
       {{#queryParams}}
