fixed model mapping, refactoring the processing of apiMap and modelMap so it's executed just once

--- a/src/main/resources/android-java/api.mustache
+++ b/src/main/resources/android-java/api.mustache
@@ -6,6 +6,7 @@ import {{invokerPackage}}.ApiInvoker;
 {{/imports}}
 
 import java.util.*;
+import java.io.File;
 
 {{#operations}}
 public class {{classname}} {
