Modifying php template to not unnecessarily re-deserialize

--- a/src/main/resources/php/api.mustache
+++ b/src/main/resources/php/api.mustache
@@ -81,10 +81,12 @@ class {{classname}} {
       if(! $response){
           return null;
         }
+          if (!is_object($response)) {
+                  $response = $this->apiClient->deserialize($response,
+                          'string');
+          }
 
-  		$responseObject = $this->apiClient->deserialize($response,
-  		                                                '{{returnType}}');
-  		return $responseObject;
+          return $response;
 
       {{/returnType}}
   }
