--- a/src/main/resources/Java/apiInvoker.mustache
+++ b/src/main/resources/Java/apiInvoker.mustache
@@ -105,6 +105,8 @@ public class ApiInvoker {
       builder.header(key, headerParams.get(key));
     }
 
+    builder.header("User-Agent", "ftb-api");
+
     for(String key : defaultHeaderMap.keySet()) {
       if(!headerParams.containsKey(key)) {
         builder.header(key, defaultHeaderMap.get(key));
