--- a/src/main/resources/Java/api.mustache
+++ b/src/main/resources/Java/api.mustache
@@ -2,9 +2,11 @@ package {{package}};
 
 import {{invokerPackage}}.ApiException;
 import {{invokerPackage}}.ApiInvoker;
+
 {{#imports}}import {{import}};
 {{/imports}}
 
+import java.io.File;
 import java.util.*;
 
 {{#operations}}
