added array support

--- a/src/main/resources/php/api.mustache
+++ b/src/main/resources/php/api.mustache
@@ -45,8 +45,8 @@ class {{classname}} {
   		$method = "{{httpMethod}}";
       $queryParams = array();
       $headerParams = array();
-      $headerParams['Accept'] = '{{produces}}';
-      $headerParams['Content-Type'] = '{{consume}}';
+      $headerParams['Accept'] = '{{#produces}}{{mediaType}}{{#hasMore}},{{/hasMore}}{{/produces}}';
+      $headerParams['Content-Type'] = '{{#consumes}}{{mediaType}}{{#hasMore}},{{/hasMore}}{{/consumes}}';
 
       {{#queryParams}}
   		if(${{paramName}} != null) {
