--- a/samples/server-generator/scalatra/templates/Bootstrap.mustache
+++ b/samples/server-generator/scalatra/templates/Bootstrap.mustache
@@ -8,7 +8,7 @@ class ScalatraBootstrap extends LifeCycle {
   implicit val swagger = new SwaggerApp
 
   override def init(context: ServletContext) {
-    implicit val system = ActorSystem("mySystem")
+    implicit val system = ActorSystem("appActorSystem")
     try {
       {{#apiInfo}}
       {{#apis}}
