--- a/samples/server-generator/node/templates/models.mustache
+++ b/samples/server-generator/node/templates/models.mustache
@@ -1,5 +1,7 @@
 exports.models = {
   {{#models}}
-  "{{modelName}}": {{{modelJson}}}{{#hasMore}},{{/hasMore}}
-{{/models}}
+  {{#model}}
+  "{{classVarName}}": {{{modelJson}}}{{#hasMoreModels}},{{/hasMoreModels}}{{newline}}
+  {{/model}}
+  {{/models}}
 }
