--- a/samples/server-generator/node/templates/package.mustache
+++ b/samples/server-generator/node/templates/package.mustache
@@ -1,9 +1,9 @@
 {
-  "name": "swagger-sample-app",
+  "name": "{{{artifactId}}}",
   "description": "Wordnik node.js server generator",
-  "version": "1.0.0",
-  "homepage": "http://swagger.wordnik.com",
-  "main": "./app/main.js",
+  "version": "{{{artifactVersion}}}",
+  "homepage": "{{{homepage}}}",
+  "main": "./{{codeDir}}/main.js",
   "engines": {
     "node": ">= 0.8.x"
   },
