--- a/samples/server-generator/node/templates/main.mustache
+++ b/samples/server-generator/node/templates/main.mustache
@@ -1,23 +1,44 @@
 var express = require("express")
  , url = require("url")
+ , cors = require("cors")
  , swagger = require("swagger-node-express")
  , db = false
 
 var app = express();
 app.use(express.bodyParser());
 
-swagger.setAppHandler(app);  
+var corsOptions = {
+  credentials: true,
+  origin: function(origin,callback) {
+    if(origin===undefined) {
+      callback(null,false);
+    } else {
+      callback(null,true);
+    }
+  }
+};
 
+app.use(cors(corsOptions));
+
+swagger.setAppHandler(app);  
+swagger.configureSwaggerPaths("", "api-docs", "")
+
+var models = require("./models.js");
+
+{{#apiInfo}}
 {{#apis}}
-var {{name}}Api = require("./apis/{{className}}.js");
+var {{name}} = require("./{{apiFolder}}/{{classname}}.js");
 {{/apis}}
+{{/apiInfo}}
 
 swagger.addModels(models)
+  {{#apiInfo}}
   {{#apis}}
   {{#operations}}
-  {{#operation}}.add{{method}}({{name}}Api.{{nickname}}){{/operation}}{{newline}}
+  {{#operation}}.add{{httpMethod}}({{name}}.{{nickname}}){{newline}}{{/operation}}
   {{/operations}}
   {{/apis}};
+  {{/apiInfo}}
 
 // configures the app
 swagger.configure("http://localhost:8002", "0.1");
