--- a/src/main/resources/csharp/api.mustache
+++ b/src/main/resources/csharp/api.mustache
@@ -1,7 +1,7 @@
   using System;
   using System.Collections.Generic;
   using {{invokerPackage}};
-  using {{invokerPackage}}.Model;
+  using {{modelPackage}};
   {{#imports}}
   {{/imports}}
 
