--- a/src/main/resources/swagger-static/index.mustache
+++ b/src/main/resources/swagger-static/index.mustache
@@ -29,6 +29,7 @@
             <li>Getting Started</li>
           </ul>
         </div>
+        {{#apiInfo}}
     		{{#apis}}
         <div class="section-box">
           <div class="section-header">
@@ -43,6 +44,7 @@
           </ul>
         </div>
         {{/apis}}
+        {{/apiInfo}}
       </div>
     <div class="non-sidebar">
       <div class="main-content">
