--- a/src/main/resources/csharp/api.mustache
+++ b/src/main/resources/csharp/api.mustache
@@ -45,6 +45,7 @@
         // query params
         var queryParams = new Dictionary<String, String>();
         var headerParams = new Dictionary<String, String>();
+        var formParams = new Dictionary<String, object>();
 
         {{#requiredParamCount}}
         // verify required params are set
@@ -53,9 +54,8 @@
         }
         {{/requiredParamCount}}
 
-		string paramStr = null;
         {{#queryParams}}if ({{paramName}} != null){
-          paramStr = ({{paramName}} != null && {{paramName}} is DateTime) ? ((DateTime)(object){{paramName}}).ToString("u") : Convert.ToString({{paramName}});
+          string paramStr = ({{paramName}} is DateTime) ? ((DateTime)(object){{paramName}}).ToString("u") : Convert.ToString({{paramName}});
           queryParams.Add("{{paramName}}", paramStr);
 		}
         {{/queryParams}}
@@ -63,17 +63,32 @@
         {{#headerParams}}headerParams.Add("{{paramName}}", {{paramName}});
         {{/headerParams}}
 
-        try {
-          var response = apiInvoker.invokeAPI(basePath, path, "{{httpMethod}}", queryParams, {{#bodyParam}}{{bodyParam}}{{/bodyParam}}{{^bodyParam}}null{{/bodyParam}}, headerParams);
-          if(response != null){
-             return {{#returnType}}({{{returnType}}}) ApiInvoker.deserialize(response, typeof({{{returnType}}})){{/returnType}};
+        {{#formParams}}if ({{paramName}} != null){
+          if({{paramName}} is byte[]) {
+            formParams.Add("{{paramName}}", {{paramName}});
+          } else {
+            string paramStr = ({{paramName}} is DateTime) ? ((DateTime)(object){{paramName}}).ToString("u") : Convert.ToString({{paramName}});
+            formParams.Add("{{paramName}}", paramStr);
           }
-          else {
-            return {{#returnType}}null{{/returnType}};
+		}
+        {{/formParams}}
+
+        try {
+          if (typeof({{#returnType}}{{{returnType}}}{{/returnType}}{{^returnType}}void{{/returnType}}) == typeof(byte[])) {
+            var response = apiInvoker.invokeBinaryAPI(basePath, path, "GET", queryParams, null, headerParams, formParams);
+            return {{#returnType}}((object)response) as {{{returnType}}}{{/returnType}};
+          } else {
+            var response = apiInvoker.invokeAPI(basePath, path, "{{httpMethod}}", queryParams, {{#bodyParam}}{{bodyParam}}{{/bodyParam}}{{^bodyParam}}null{{/bodyParam}}, headerParams, formParams);
+            if(response != null){
+               return {{#returnType}}({{{returnType}}}) ApiInvoker.deserialize(response, typeof({{{returnType}}})){{/returnType}};
+            }
+            else {
+              return {{#returnType}}null{{/returnType}};
+            }
           }
         } catch (ApiException ex) {
           if(ex.ErrorCode == 404) {
-          	return {{#returnType}} null{{/returnType}};
+          	return {{#returnType}}null{{/returnType}};
           }
           else {
             throw ex;
