--- a/src/main/resources/android-java/pom.mustache
+++ b/src/main/resources/android-java/pom.mustache
@@ -47,7 +47,22 @@
           </execution>
         </executions>
       </plugin>
-
+      <plugin>
+    	<artifactId>maven-assembly-plugin</artifactId>
+    	<executions>
+      	  <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
       <!-- attach test jar -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
