Python: set headerParams after headers['Token']

--- a/src/main/resources/python/swagger.mustache
+++ b/src/main/resources/python/swagger.mustache
@@ -32,13 +32,13 @@ class ApiClient:
 
         url = self.apiServer + resourcePath
         headers = {}
+        #headers['Content-type'] = 'application/json'
+        headers['Token'] = self.apiKey
+        headers['User-Agent'] = 'ftb-api'
+        
         if headerParams:
             for param, value in headerParams.iteritems():
                 headers[param] = value
-
-        #headers['Content-type'] = 'application/json'
-        headers['Token'] = self.apiKey or headers['Token']
-        headers['User-Agent'] = 'ftb-api'
 
         if self.cookie:
             headers['Cookie'] = self.cookie
