made templates same as 2.0

--- a/src/main/resources/objc/api-body.mustache
+++ b/src/main/resources/objc/api-body.mustache
@@ -2,7 +2,7 @@
 #import "{{classname}}.h"
 #import "SWGFile.h"
 #import "SWGApiClient.h"
-{{#imports}}#import "{{import}}"
+{{#imports}}#import "{{import}}.h"
 {{/imports}}
 {{newline}}
 
