--- a/src/main/resources/objc/api-header.mustache
+++ b/src/main/resources/objc/api-header.mustache
@@ -1,5 +1,5 @@
 #import <Foundation/Foundation.h>
-{{#imports}}#import "{{import}}"
+{{#imports}}#import "{{import}}.h"
 {{/imports}}
 {{newline}}
 
