--- a/src/main/resources/objc/model-header.mustache
+++ b/src/main/resources/objc/model-header.mustache
@@ -1,6 +1,6 @@
 #import <Foundation/Foundation.h>
 #import "SWGObject.h"
-{{#imports}}#import "{{import}}"
+{{#imports}}#import "{{import}}.h"
 {{/imports}}
 {{newline}}
 {{#models}}
