Fixes #260 convert form parameters to string for Java client

--- a/src/main/resources/Java/api.mustache
+++ b/src/main/resources/Java/api.mustache
@@ -82,7 +82,10 @@ public class {{classname}} {
         postBody = mp;
     }
     else {
-      {{#formParams}}{{#notFile}}formParams.put("{{baseName}}", {{paramName}});{{/notFile}}
+      {{#formParams}}
+      {{#notFile}}
+      formParams.put("{{baseName}}", String.valueOf({{paramName}}));
+      {{/notFile}}
       {{/formParams}}
     }
 
