updated template location, added snapshot

--- a/src/main/resources/JavaJaxRS/pom.mustache
+++ b/src/main/resources/JavaJaxRS/pom.mustache
@@ -114,6 +114,12 @@
       <version>${servlet-api-version}</version>
     </dependency>
   </dependencies>
+  <repositories>
+    <repository>
+      <id>sonatype-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </repository>
+  </repositories>
   <properties>
     <swagger-core-version>1.5.0-SNAPSHOT</swagger-core-version>
     <jetty-version>8.1.11.v20130520</jetty-version>
