fixing a minor issue with the bodyParam python api.mustashe

--- a/src/main/resources/python/api.mustache
+++ b/src/main/resources/python/api.mustache
@@ -86,8 +86,8 @@ class {{classname}}(object):
             headerParams['Content-type'] = 'application/x-www-form-urlencoded'
 
         {{#bodyParam}}
-        if ('{{paramName}}' in params):
-            bodyParam = params['{{paramName}}']
+        if ('body' in params):
+            bodyParam = params['body']
         {{/bodyParam}}
 
         postData = (formParams if formParams else bodyParam)
