--- a/src/main/resources/JavaJaxRS/model.mustache
+++ b/src/main/resources/JavaJaxRS/model.mustache
@@ -2,16 +2,18 @@ package {{package}};
 
 {{#imports}}import {{import}};
 {{/imports}}
+
+import com.wordnik.swagger.annotations.*;
 {{#models}}
 
 {{#model}}{{#description}}
 /**
  * {{description}}
  **/{{/description}}
+@ApiModel(description = "{{{description}}}")
 public class {{classname}} {{#parent}}extends {{{parent}}}{{/parent}} { {{#vars}}
   /**{{#description}}
-   * {{{description}}}{{/description}}
-   * required: {{required}}{{#minimum}}
+   * {{{description}}}{{/description}}{{#minimum}}
    * minimum: {{minimum}}{{/minimum}}{{#maximum}}
    * maximum: {{maximum}}{{/maximum}}
    **/
@@ -20,7 +22,9 @@ public class {{classname}} {{#parent}}extends {{{parent}}}{{/parent}} { {{#vars}
   //{{^min}}public enum {{name}}Enum { {{#values}} {{.}}, {{/values}} }; 
   {{/min}}{{/allowableValues}}{{/vars}}
   
-  {{#vars}}public {{{datatype}}} {{getter}}() {
+  {{#vars}}
+  @ApiModelProperty(required = {{required}}, value = "{{{description}}}")
+  public {{{datatype}}} {{getter}}() {
     return {{name}};
   }
   public void {{setter}}({{{datatype}}} {{name}}) {
